k8s/router.yml
apiVersion: v1
kind: Namespace
metadata:
  name: deis
  labels:
    heritage: deis
  annotations:
    helm-keep: "true"
