k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: emmie
  labels:
    name: emmie
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    name: emmie
